

                              Kiji Schema Release Notes

Version 1.1.1
  * SCHEMA-433. Kiji ls now defaults to listing Kiji instances if no argument
      is given.
  * SCHEMA-440. An IOException or KijiNotInstalledException occuring during the
      instantiation of an HBaseKiji instance no longer leads to retained reference
      count warnings once the JVM garbage collects.

Version 1.1.0
  * SCHEMA-434. Fixes a race condition in ZooKeeperClient which might cause
      a NPE when closing a Kiji instance.
  * SCHEMA-429. Kiji command line now asks the user to type in the instance or
      table name when uninstalling or deleting them.
  * SCHEMA-405. Adds KijiRowKeyComponents, a way to specify the components
      of a Kiji row key independent of a RowKeyFormat. May be converted into
      an EntityId, given a KijiTable or EntityIdFactory.
  * SCHEMA-388. KijiRowScanner handles HBase scanner timeouts and reopens
      the scanner as needed. Introduces two scanner options:
       - KijiScannerOptions.setReopenScannerOnTimeout() is true by default,
	 which means HBase scanners are automatically reopened on timeouts
	 instead of throwing a ScannerTimeoutException;
       - KijiScannerOptions.setRowCaching() configures the number of rows
	 fetched for each RPC to the region server. By defaults, this has
	 the of value the configuration property hbase.client.scanner.caching,
	 which is 1 unless overridden in hbase-site.xml.
  * SCHEMA-380. Version pagers may now be created on fully-qualified columns
      belonging to paging-enabled map-type families.
  * SCHEMA-355. KijiRowKeySplitter is parametrized by row key resolution.
  * SCHEMA-346. AtomicKijiPutter is no longer restricted to writing within a
      single locality group.  Calls to commit() no longer accept a locality group name.
  * SCHEMA-354. Change use of filters to comply with HBase 0.92 and 0.94 semantics.
    This provides experimental support for HBase 0.94, though this is not the