@@ -8,6 +8,9 @@ Version 1.1.1
   * SCHEMA-440. An IOException or KijiNotInstalledException occuring during the
       instantiation of an HBaseKiji instance no longer leads to retained reference
       count warnings once the JVM garbage collects.
+  * SCHEMA-445. Fixes a bug in the DataRequest adapter that causes requests
+      with mixed paging and non-paging columns to discard all values from all
+      columns in a row, causing IOException while decoding the cells later on.
 
 Version 1.1.0
   * SCHEMA-434. Fixes a race condition in ZooKeeperClient which might cause
